hphp/hack/test/typecheck/vec_const.php.exp
File "vec_const.php", line 7, characters 62-69:
Invalid expression in constant initializer (Parsing[1002])
